changed plugin id and version bump

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:rim="http://www.blackberry.com/ns/widgets"
         id="org.beuckman.pgpebble"
-        version="0.0.0">
+        version="0.0.1">
 
     <name>Pebble</name>
     <description>PhoneGap plugin to implement the Pebble SDK</description>
@@ -14,7 +14,7 @@
     </info>
 
     <js-module src="www/cordova_plugin_pebble.js" name="Pebble">
-        <clobbers target="navigator.Pebble" />
+        <clobbers target="window.plugins.Pebble" />
     </js-module>
 
     <engines>
